@@ -123,6 +123,8 @@
 <a name="install_server_config_register_globals"></a><h3>register_globals<a href="#install_server_config_register_globals" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>In older versions of PHP, the default setting for <a href="http://www.php.net/manual/en/security.globals.php" rel="external" class="external">register_globals</a> used to be "on", which resulted in many PHP coders coming up with sloppy code in terms of security (simply because they were not aware of the dangers that lay in such sloppy coding). As a result, there used to be many scripts that relied on the server variable "register_globals" to be turned on. However, as many malevolent attacks against scripts are being carried out that rely on register_globals to be turned on, it's advisable to turn that feature off in the config of your webserver's PHP settings. In recent versions of PHP, the default setting is "off". However, your webhost may still have enabled register_globals to allow you to run outdated scripts that rely on register_globals.</p>
 <p class="cpg_message_success">To make this absolutely clear: coppermine does <strong>not</strong> need register_globals=on, but it will run both with register_gloabls turned on or off. It's just the security impact of this variable turned on that we want to alert end users about. If your webserver has register_globals turned on, the installer will warn you about this fact, but it will continue anyway.</p>
+<p>The Coppermine dev team strongly recommends to turn <tt class="code">register_globals</tt> off on your server. However, we can not tell you how to accomplish that: it's a webserver-setting, not a Coppermine setting. Usually (when you're on shared hosting) you can ask your webhost to turn <tt class="code">register_globals</tt> off for you on your server. A good webhost should do that for you or tell you how to accomplish this (if they allow you to configure your server). Please do not ask question on <tt class="code">register_globals</tt> on the Coppermine support board - that's beyond the scope of that support forum.</p>
+<p>There will be no negative impact <em>for your Coppermine install</em> if you leave <tt class="code">register_globals</tt> turned on: nobody but you (the admin) will notice the mesages of the script that warn about the dangers that lie in <tt class="code">register_globals</tt>. There might however be an impact for other applications on your webspace - we can't tell for sure.</p>
 <a name="install_server_config_register_globals_end"></a>
 <a name="install_server_config_end"></a>
 
