@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-07-08 [O] Added additional information for register globals (thread ID60486) {GauGau}
 2009-06-23 [O] Organized & optimized update.php and added output rows for file updates {Paver}
 2009-06-23 [B] Corrected label on update.php for deleting files by fixing delete function return value {Paver}
 2009-06-18 [D] Added missing documentation about thumb sharpening {GauGau}
